2003-01-02  Paolo Maggi <paolo.maggi@polito.it>

	* gedit-print.c: fixed bug #97806 (printer configuration/settings 
	should be remembered)

	* gedit-output-window.c: improved key navigability

2002-12-30  Paolo Maggi <paolo.maggi@polito.it>

	* gedit-view.c: fixed bug #81401

2002-12-29  Paolo Maggi <paolo.maggi@polito.it>

	* gedit-prefs-manager.c: s/Mononospace/Monospace Regular
	s/Sans Normal/Sans Regular

	* dialogs/gnome-print-font-picker.c: s/sans/Sans Regular

2002-12-28  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-encodings.c: added ISO-8859-2 to the list of 
	supported encodings (patch by 
	Marcin Malinowski <malinx@friko5.onet.pl>)

2002-12-25  Christian Neumair  <chris@gnome-de.org>

	* gedit-commands.c: Revamped about dialog (#101646).

2002-12-17  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-utils.c (g_utf8_strcasestr): use strncmp instead of
	memcmp
	(g_utf8_caselessnmatch): ditto
	(lines_match): fix a cut and paste bug

2002-12-16  Paolo Maggi  <paolo.maggi@polito.it>

	* dialogs/gedit-preferences-dialog.c 
	(gedit_preferences_dialog_wrap_lines_chec): s/GTK_WRAP_CHAR/GTK_WRAP_WORD

	* dialogs/gedit-preferences.glade2: fix Print/Page page according to
	ui-review

2002-12-16  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* gedit-print.c: Fixed the word-wrap problem (bug#99273). 
	Character-wrap and wrap-none features kept unaltered.

2002-12-15  Paolo Maggi  <paolo.maggi@polito.it>
	
	* gedit-viewc.c (gedit_view_grab_focus): don't modify GtkTextView 
	readonly field disable_scroll_on_focus

	* dialogs/gedit-dialog-replace.c : escape text before inserting in the 
	search or replace entry
	(insert_text_handler)(escape_search_text): new functions

2002-12-15  Adam Ritter  <adam@xiphias.cjb.net>

	* dialogs/gedit-dialog-replace.c (gedit_dialog_find):
	* dialogs/gedit-dialog-replace.c (gedit_dialog_replace):

	After selecting a word and trying to find/replace
	the selected word is in the corresponding dialog. (Bug #100340)
