@@ -1,5 +1,15 @@
 2003-01-02  Paolo Maggi <paolo.maggi@polito.it>
 
+	* gedit-plugins-engine.c: fixed bug #102343 (Plugins changes 
+	made in one head are not reflected on the other head)
+	(gedit_plugins_engine_active_plugins_changed): new function
+	(gedit_plugins_engine_init): add a listener for changes
+	in the GEDIT_PLUGINS_ENGINE_BASE_KEY dir
+	
+	Fixed a bug with gconf keys computation
+
+2003-01-02  Paolo Maggi <paolo.maggi@polito.it>
+
 	* gedit-print.c: fixed bug #97806 (printer configuration/settings 
 	should be remembered)
 
